sistema de tiros

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 <body>
   <div id="fundo">
     <div id="area_jogo">
-      <div id="player">
-
-      </div>
+      <div id="player"></div>
     </div>
   </div>
-  <script src="js/gameengine.js"></script>
   <script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/jquery-collision.min.js"></script>
+  <script src="js/gameengine.js"></script>
+
 </body>
 
 </html>
